<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textHeader"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:layout_gravity="center"
        android:gravity="center"
        />
    <EditText
        android:id="@+id/editDistancia"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/editDistance"
        android:inputType="numberDecimal"
        android:layout_marginTop="32dp"
        />
    <TextView
        android:id="@+id/totalKm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalKm"
        android:textSize="16sp"
        android:layout_marginTop="2dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:gravity="center"
        />
    <EditText
        android:id="@+id/editPrice"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/editPrice"
        android:inputType="numberDecimal"
        android:layout_marginTop="32dp"
        />
    <TextView
        android:id="@+id/textPriceLiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textPriceLiter"
        android:textSize="16sp"
        android:layout_marginTop="2dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:gravity="center"
        />
    <EditText
        android:id="@+id/editAutonomy"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/editAutonomy"
        android:inputType="numberDecimal"
        android:layout_marginTop="32dp"
        />
    <TextView
        android:id="@+id/textAutonomy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textAutonomy"
        android:textSize="16sp"
        android:layout_marginTop="2dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/textAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textAns"
        android:textSize="16sp"
        android:layout_marginTop="64dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/labelResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelResult"
        android:textSize="32sp"
        android:layout_marginTop="8dp"
        android:textColor="@color/blue"
        android:layout_gravity="center"
        android:gravity="center"
        />
    <Button
        android:id="@+id/buttonCalculate"
        android:text="@string/buttonCalculate"
        android:textSize="26sp"
        android:padding="16dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/lightgreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>